tests/e2e/mutation_command_index2.error
Error: syntax error in story at line 2, column 13

2|    b = a values[a]
                  ^

E0041: `[` is not allowed here
