tests/e2e/mutation_command_index2.story
a = {1: "bar"}
b = a values[a]
